fixed controller and card list alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,8 @@ body {
 
 .container {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 .controllers {
